--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -1,4 +1,9 @@
 .column {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    margin: 8px;
+
     &__header {
         display: flex;
         align-items: center;
@@ -7,7 +12,10 @@
             padding: 5px 10px;
             background: white;
             border: 1px solid lightgrey;
-            border-radius: 2px;
         }
+    }
+
+    &__title {
+        padding: 8px;
     }
 }
