--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -2,11 +2,15 @@
     display: flex;
     flex-direction: column;
     width: 300px;
-    margin: 8px;
+    margin-right: 20px;
+
+    border: 1px solid lightgrey;
+    border-radius: 4px;
 
     &__header {
         display: flex;
         align-items: center;
+        border-bottom: 1px solid lightgrey;
 
         button {
             padding: 5px 10px;
