--- a/src/App.scss
+++ b/src/App.scss
@@ -32,7 +32,7 @@
     min-height: 200px;
 
     &.m_isDraggingOver {
-        background-color: skyblue;
+        background-color: #e5f2fa;
     }
 }
 
